<resources>
    <string name="app_name">WifiManager</string>
    <string name="factory_name">CHANGHONG </string>
    <string name="cancel">Cancel</string>
    <string name="withdraw">Withdraw</string>
    <string name="delete">Delete</string>
    <string name="update">UPDATE</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="no_save">Do not save</string>
    <string name="commit">Commit</string>
    <string name="auto">AUTO</string>
    <string name="_exit">Exit</string>
    <string name="reboot">Reboot</string>
    <string name="unbind">unbind</string>
    <string name="recovery">Recovery</string>
    <string name="_continue">Continue</string>
    <string name="retry">Retry</string>
    <string name="complete">Complete</string>
    <string name="warning">Warning</string>
    <string name="_plc" translatable="false">PLC</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="known_device">Known device</string>
    <string name="login_failed">Login failed</string>
    <string name="password_wrong">Password incorrect.</string>
    <string name="old_password_wrong">Old password incorrect.</string>
    <string name="login_succeed">Login succeed.</string>
    <string name="login_notice">Please enter the router admin password</string>
    <string name="login_notice_plc">Please enter the PLC admin password</string>
    <string name="notice_admin_password_error">Admin passwrod error.</string>
    <string name="notice_reboot_completed">The reboot is completed, and the device interface will exit. Please wait patiently for the device to restart.</string>
    <string name="notice_reset_completed">The restore factory settings is completed, and the device interface will exit. Please wait patiently for the device to restart.。</string>
    <string name="mainNode">Master node</string>
    <string name="childNode">Child node </string>
    <string name="unavailable">Unavailable</string>
    <string name="none_selected">none selected</string>
    <string name="bwr510">Mesh router</string>
    <string name="R2s">Gigabit dual band router</string>
    <string name="plc">Power Line Communication</string>
    <string name="tab_wan_type">WAN type：</string>
    <string name="device_type">Device type: </string>
    <string name="next">Next</string>
    <string name="notice_error_format">Input format error.</string>
    <string name="notice_name_empty">Account cannot be empty.</string>
    <string name="notice_ssid_empty">SSID cannot be empty.</string>
    <string name="notice_pwd_empty">Password cannot be empty.</string>
    <string name="notice_device_name_empty">Device name cannot be empty.</string>
    <string name="tab_input_pppoe_account_password">Please enter the account and password provided by the network server</string>
    <string name="notice_check_router_pwd_by_admin">Please check the label below the router for administrator password ...</string>
    <string name="notice_con_ch_router">Please connect to the WiFi corresponding to Changhong router.</string>
    <string name="notice_con_ch_plc">Please connect to the WiFi corresponding to Changhong Power Line Communication.</string>
    <string name="notice_connect_introduce"><![CDATA[1、Enter the mobile phone system - > Wireless Settings  \n2、Find and connect the corresponding WiFi name on the SSID .]]></string>
    <string name="goto_wlan_setting">Connected to Wi Fi, next</string>
    <string name="note_mesh_info_request">Query mesh information, please wait a moment……</string>
    <string name="notice_wait_for_wizard">Wait for commit wizard setting……</string>
    <string name="notice_search_mesh">Searching new mesh equipment, please wait for a little while.....</string>
    <string name="notice_search_plc">Searching new plc equipment, please wait for a little while.....</string>
    <string name="notice_add_mesh_1">Please power on the new router to be added and place it near the configured router ...</string>
    <string name="notice_add_mesh_2">When the indicator light of newly added networking router blinks blue, click Next...</string>
    <string name="notice_add_plc_1">Please power on the new Power Line Communication to be added and place it near the configured Power Line Communication ...</string>
    <string name="notice_add_plc_2">When the indicator light of newly added Power Line Communication blinks blue, click Next...</string>
    <string name="complete_mesh">Completion of meshing.</string>
    <string name="device_info">Device info</string>
    <string name="client_info">Terminal details</string>
    <string name="device_name">Device name</string>
    <string name="device_mac_addr">Device MAC address</string>
    <string name="tab_online_client">Online terminal</string>
    <string name="connecttype_wire">Wired</string>
    <string name="connecttype_24G" translatable="false">2.4G</string>
    <string name="connecttype_5G" translatable="false">5G</string>
    <string name="connecttype_2_5G" translatable="false">WIFI</string>
    <string name="connecttype_guest">Guest Network</string>
    <string name="connecttype_no">No Connection</string>
    <string name="format_link_time_hhmm" formatted="false">Connected for %d hours and %d minutes</string>
    <string name="format_link_time_mm">Connected for %d minutes</string>
    <string name="main">\n(Main)</string>
    <string name="child">\n(Child)</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="secound">Secound</string>
    <string name="secounds">Secounds</string>
    <string name="internet">Internet</string>
    <string name="device_manager">Device management</string>
    <string name="broadband_limit">Broadband restriction</string>
    <string name="group">Grouping</string>
    <string name="online_notice">On-line reminder</string>
    <string name="network_forbid">No internet access </string>
    <string name="no_limit">Unlimited</string>
    <string name="tab_upload_limit">Maximum upload speed (Kb/s)</string>
    <string name="tab_download_limit">Maximum download speed (Kb/s)</string>
    <string name="tab_upload_limit_PLC">Maximum upload speed (Mb/s)</string>
    <string name="tab_download_limit_PLC">Maximum download speed (Mb/s)</string>
    <string name="speed_limit">Broadband speed limit</string>
    <string name="commiting">Commiting……</string>
    <string name="downloading">Loading……</string>
    <string name="opening">Opening……</string>
    <string name="closing">Closing……</string>
    <string name="commit_completed">Commit completed.</string>
    <string name="commit_failed">Commit failed.</string>
    <string name="notice_mac_empty">MAC can not be empty.</string>
    <string name="common_setting">Common Settings</string>
    <string name="function_setting">Function Settings</string>
    <string name="rebooting">Rebooting……</string>
    <string name="recovering">Restoring factory settings……</string>
    <string name="channel">Channel</string>
    <string name="auto_dfs">Auto(DFS)</string>
    <string name="wifi_advance_setting">Wi-Fi Advance Settings</string>
    <string name="wifi_setting">Wi-Fi Settings</string>
    <string name="double_frequency">5G Priority</string>
    <string name="notice_double_frequency">2.4g and 5G Wi-Fi dual frequency integration, the router automatically for you to choose faster wi-fi band, turn off this switch, can be set separately.</string>
    <string name="notice_double_frequency_plc">2.4g and 5G Wi-Fi dual frequency integration, the PLC automatically for you to choose faster wi-fi band, turn off this switch, can be set separately.</string>
    <string name="base_setting">Base Settings</string>
    <string name="group_setting">Group Settings</string>
    <string name="title_2_4G" translatable="false">2.4GHz WiFi</string>
    <string name="title_5G" translatable="false">5GHz WiFi</string>
    <string name="wifi_name">SSID</string>
    <string name="wifi_name_2G">SSID2.4G</string>
    <string name="wifi_name_5G">SSID5G</string>
    <string name="wifi_password">Wi-fi password</string>
    <string name="wifi_password2G">Wi-fi 2.4G password</string>
    <string name="wifi_password5G">Wi-fi 5G password</string>
    <string name="encrypt">Encryption</string>
    <string name="authentication_mode">Authentication mode</string>
    <string name="hide_ssid">Hide SSID</string>
    <string name="wifi_power_pattern">WIFI power mode</string>
    <string name="advance_setting">Advance Settings</string>
    <string name="router_setting">Router setting</string>
    <string name="plc_setting">PLC setting</string>
    <string name="search_router">Device add or reset</string>
    <string name="logining">Logging……</string>
    <string name="checking_wizard_setting">Verify device configuration status……</string>
    <string name="internet_setting">Internet settings</string>
    <string name="network_setting">Network settings</string>
    <string name="device_name_and_room">Device name and room</string>
    <string name="checking_pppoe_state">Getting PPPoE status ……</string>
    <string name="pppoe_state_disconnect">Unconnected</string>
    <string name="pppoe_state_connecting">Connecting……</string>
    <string name="pppoe_state_connected">Connected</string>
    <string name="pppoe_state_account_or_passord_error">Wrong user name or password</string>
    <string name="pppoe_state_unknown_error">Unknown error</string>
    <string name="admin_password">Administrator password </string>
    <string name="edit_password">Edit password</string>
    <string name="password_rule">Passwords can be 8-32 numbers, letters, and special characters (_ or @ only) </string>
    <string name="password_wifi_rule">Passwords can be 8-64 numbers, letters, and special characters (_ or @ only) </string>
    <string name="wizard_password_wifi_rule">Passwords can be empty, or 8-64 numbers, letters, and special characters (_ or @ only) </string>
    <string name="password_not_same">The two passwords are different, please re-enter </string>
    <string name="bind_router">Bind router</string>
    <string name="bind_plc">Bind PLC</string>
    <string name="interaction_failed">Interaction failure</string>
    <string name="connection_refused">Connection to %s refused.</string>
    <string name="timeout">Timeout</string>
    <string name="connection_timeout">connect to %s isConnected failed.(Connection time out)</string>
    <string name="known_host">Unable to resolve host "%s": No address associated with hostname</string>
    <string name="notice_not_match_ipv4">Non IPv4 format</string>
    <string name="notice_cannot_more_than_max">Value cannot be greater than the maximum value</string>
    <string name="notice_max_gt_254">Max value cannot grater than 254.</string>
    <string name="notice_min_lt_2">Min value cannot less than 2.</string>
    <string name="notice_not_be_empty">Not to be empty</string>
    <string name="notice_cannot_less_than_min">Value cannot be less than the minimum value </string>
    <string name="visit_control">Access control</string>
    <string name="device_black_list">Current device blacklist</string>
    <string name="bing_device">Bind the device</string>
    <string name="found_device">Found device</string>
    <string name="notice_0_is_unlimited">Enter 0 for unlimited</string>
    <string name="index">SN</string>
    <string name="client_name">Terminal name</string>
    <string name="mac_address">MAC</string>
    <string name="operation">Operation</string>
    <string name="switch_wifi">Switch WiFi</string>
    <string name="master_node">Master node:</string>
    <string name="back_to_previous_step">Back to previous step.</string>
</resources>