<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar_bg"
        android:minWidth="480dp"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:contentDescription="@string/back_to_previous_step"
            android:src="@drawable/ic_chevron_left_black_24dp" />

        <TextView
            android:id="@+id/tv_title"
            style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/visit_control"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/save"
            android:textColor="@android:color/holo_blue_dark"
            android:visibility="invisible" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="?android:attr/listPreferredItemPaddingStart"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/device_black_list" />

    <TableLayout
        android:id="@+id/table_black_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="?android:attr/listPreferredItemPaddingStart"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="?android:attr/listPreferredItemPaddingEnd"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_table_cell_title"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/index" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_table_cell_title"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/client_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_table_cell_title"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/mac_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_table_cell_title"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/operation" />
        </TableRow>
    </TableLayout>

</LinearLayout>