<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_wizard_guide1" />

    <TextView
        android:id="@+id/tv_title"
        style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/search_router"
        android:textColor="@color/textColorPrimary" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_title"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/back_to_previous_step"
        android:src="@drawable/ic_chevron_left_black_24dp" />

    <CheckBox
        android:id="@+id/cb_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:button="@drawable/shape_mesh_cycle"
        android:clickable="false" />

    <TextView
        android:id="@+id/tv_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/notice_con_ch_router" />

    <TextView
        android:id="@+id/tv_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_info1"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/notice_connect_introduce" />

    <TextView
        android:id="@+id/btn_change_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_info2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/switch_wifi"
        android:textColor="@color/textColorClickable" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_change_ssid"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="?android:attr/listPreferredItemPaddingStart"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="?android:attr/listPreferredItemPaddingEnd"
        android:background="@drawable/selector_bg_btn_default"
        android:text="@string/goto_wlan_setting"
        android:textColor="@color/textColorPrimary"
        android:visibility="gone" />

</RelativeLayout>
