<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.SpeedLimitFragment">

    <FrameLayout
        android:id="@+id/panel_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar_bg"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:contentDescription="@string/back_to_previous_step"
            android:src="@drawable/ic_chevron_left_black_24dp" />

        <TextView
            android:id="@+id/tv_title"
            style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/speed_limit"
            android:textColor="@color/textColorPrimary" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_bg_table_cell"
        android:gravity="center"
        android:minHeight="50dp">

        <TextView
            android:id="@+id/tab_max_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_upload_limit" />

        <EditText
            android:id="@+id/et_upload_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/no_limit"
            android:inputType="number"
            android:maxLength="8"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_bg_table_cell"
        android:gravity="center"
        android:minHeight="50dp">

        <TextView
            android:id="@+id/tab_max_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_download_limit" />

        <EditText
            android:id="@+id/et_download_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/no_limit"
            android:inputType="number"
            android:maxLength="8"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:textSize="8sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:text="@string/notice_0_is_unlimited" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="?android:attr/listPreferredItemPaddingStart"
        android:layout_marginEnd="?android:attr/listPreferredItemPaddingEnd"
        android:background="@drawable/selector_bg_btn_default"
        android:text="@string/save"
        android:textColor="@color/textColorPrimary" />

</LinearLayout>