<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/panel_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar_bg"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:contentDescription="@string/back_to_previous_step"
            android:src="@drawable/ic_chevron_left_black_24dp" />

        <TextView
            android:id="@+id/tv_title"
            style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/device_info"
            android:textColor="@color/textColorPrimary" />

        <ImageView
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/common_setting"
            android:src="@android:drawable/ic_menu_manage"
            android:visibility="invisible" />
    </FrameLayout>

    <TextView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:drawableTop="@drawable/ic_internet_blue_80dp"
        android:gravity="center"
        android:text="@string/internet" />

    <ListView
        android:id="@+id/list_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
