<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.fragment.guide.WizardNetworkFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar_bg"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:contentDescription="@string/back_to_previous_step"
            android:src="@drawable/ic_chevron_left_black_24dp" />

        <TextView
            android:id="@+id/tv_title"
            style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/network_setting"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:clickable="true"
            android:text="@string/save"
            android:textColor="@color/textColorPrimary"
            android:visibility="invisible" />
    </FrameLayout>

    <TextView
        android:id="@+id/btn_wifi_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_text_white_blue"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/wifi_setting"
        android:textAppearance="?android:attr/textAppearanceListItemSmall" />

    <TextView
        android:id="@+id/btn_wlan_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_text_white_blue"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/internet_setting"
        android:textAppearance="?android:attr/textAppearanceListItemSmall" />

</LinearLayout>