<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="50dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:src="@android:drawable/ic_menu_recent_history"
        android:layout_marginEnd="8dp" />

    <com.changhong.wifimng.ui.view.ScrollForeverTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:text="@string/group"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_share_btn"
        android:gravity="center"
        android:text="@string/withdraw"
        android:textColor="@color/textColorPrimary" />

    <TextView
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:background="@drawable/bg_share_btn"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/textColorPrimary" />

</LinearLayout>
