<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/device_type"
        android:src="@drawable/ic_flash_on_black_24dp" />

    <TextView
        android:id="@+id/tv_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/icon"
        android:text="@string/device_name" />

    <TextView
        android:id="@+id/tv_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ssid"
        android:layout_alignStart="@id/tv_ssid"
        android:layout_marginTop="8dp"
        android:text="IP:" />

    <TextView
        android:id="@+id/tv_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ip"
        android:layout_alignStart="@id/tv_ssid"
        android:layout_marginTop="8dp"
        android:text="MAC:" />

    <TextView
        android:id="@+id/tv_main_or_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mac"
        android:layout_alignStart="@id/tv_ssid"
        android:layout_marginTop="8dp"
        android:text="@string/master_node" />

</RelativeLayout>
